hphp/hack/test/typecheck/shape/shape_put_no_inout.php.exp
ERROR: File "shape_put_no_inout.php", line 4, characters 10-47:
Invalid return type (Typing[4138])
  File "Shapes.hhi", line 112, characters 10-19:
  This shape type allows unknown fields, and so it may contain fields other than those explicitly declared in its declaration.
  File "shape_put_no_inout.php", line 3, characters 42-73:
  It is incompatible with a shape that does not allow unknown fields.
ERROR: File "shape_put_no_inout.php", line 4, characters 22-33:
Unexpected `inout` annotation for argument (Typing[4183])
  File "Shapes.hhi", line 109, characters 18-23:
  This is a normal parameter (does not have `inout`)
